--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,6 +1,7 @@
 ---
 name: Checks
 on: [push]
+
 jobs:
   test-lint:
     name: Test and Lint
@@ -13,11 +14,7 @@ jobs:
           password: ${{secrets.DOCKERHUB_TOKEN}}
       - name: Checkout
         uses: actions/checkout@v2
-        name: Test
+      - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
-
-
-        
-        
